--- a/index.html
+++ b/index.html
@@ -1,28 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flex Cards</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">  
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
-    <main>
+    <header>
         <h1>Meet Our Team</h1>
-        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos facere excepturi velit dolore quis labore illum magnam veritatis explicabo! Architecto, sit tenetur magni aspernatur repudiandae neque atque nisi quisquam.</h4>
+    </header>
+    <main>
         <div class="container">
-            <ul>
-                <li>Marco Bianchi</li>
-                <li>Laura Rossi</li>
-                <li>Giorgio Verdi</li>
-                <li>Marta Ipsum</li>
-                <li>Roberto Lorem</li>
-                <li>Daniela Amet</li>
-            </ul>
+            <h4>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos
+                facere excepturi velit dolore quis labore illum magnam veritatis
+                explicabo! Architecto, sit tenetur magni aspernatur repudiandae neque
+                atque nisi quisquam.
+            </h4>
+            <div class="team-list">
+                <div class="team-member">
+                    <img src="img/male1.png" alt="foto-marco-bianchi" />
+                    <div class="info">
+                        <div class="name">marco bianchi</div>
+                        <div class="role">Designer</div>
+                        <div class="mail">marcobianchi@team.com</div>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <img src="img/female1.png" alt="foto-laura-rossi" />
+                    <div class="info">
+                        <div class="name">laura rossi</div>
+                        <div class="role">Front-end Develper</div>
+                        <div class="mail">laurarossi@team.com</div>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <img src="img/male2.png" alt="foto-giorgio-verdi" />
+                    <div class="info">
+                        <div class="name">giorgio verdi</div>
+                        <div class="role">Back-end Develper</div>
+                        <div class="mail">giorgioverdi@team.com</div>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <img src="img/female2.png" alt="foto-marta-ipsum" />
+                    <div class="info">
+                        <div class="name">marta ipsum</div>
+                        <div class="role">SEO Specialist</div>
+                        <div class="mail">martaipsum@team.com</div>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <img src="img/male3.png" alt="foto-roberto-lorem" />
+                    <div class="info">
+                        <div class="name">roberto lorem</div>
+                        <div class="role">Project Manager</div>
+                        <div class="mail">robertolorem@team.com</div>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <img src="img/female3.png" alt="foto-daniela-amet" />
+                    <div class="info">
+                        <div class="name">daniela amet</div>
+                        <div class="role">Analyst</div>
+                        <div class="mail">danielaamet@team.com</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
+
 </html>
